<resources>
    <string name="app_name">Geegs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="don_t_have_an_account"><u>Dont have an account?</u></string>
    <string name="musicgenre_prompt">Choose song genre</string>

    <string-array name="musicgenre_arrays">
        <item>Choose song genre</item>
        <item>Blues</item>
        <item>Classic</item>
        <item>Country</item>
        <item>Electronic Dance Music</item>
        <item>Heavy Metal</item>
        <item>Hip hop</item>
        <item>Jazz</item>
        <item>Pop</item>
        <item>Rock</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add_song">ADD SONG</string>
    <string name="by">by*</string>
    <string name="primary_artist">(Primary Artist, Author, Creator, etc)</string>
    <string name="title">Title*</string>
    <string name="song_title">(Song Title)</string>
    <string name="genre">Genre*</string>
    <string name="lyrics">Lyrics*</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="youtube_url_hint">(Youtube URL)</string>
    <string name="submit">Submit</string>
    <string name="title_detail_lyrics">Title</string>
    <string name="artist_detail_lyrics">by Artist</string>
    <string name="url_detail_lyrics">Url :</string>
    <string name="url_tv_detail_lyrics">youtube.com</string>
    <string name="lyric_detail_lyrics">Lyric</string>
    <string name="genre_detail_lyrics">Genre :</string>
    <string name="welcome_to_geegs">Welcome to GEEGS</string>
    <string name="desc_geegs">lyrics song for everyone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="geegs">GEEGS</string>
    <string name="sign_up_to_geegs">Sign Up to GEEGS</string>
    <string name="full_name">Full Name</string>
    <string name="password_at_least_6_characters">Password (at least 6 characters)</string>
    <string name="sign_up">Sign Up</string>
    <string name="verification_email_notif">Verification email has been sent to geegs@gmail.com</string>
    <string name="resend_code">Resend code in</string>
    <string name="one_minutes">1:00</string>
    <string name="resend_code_button">Resend Code</string>
    <string name="logout">logout</string>
    <string name="add_a_song">Add a Song</string>
    <string name="my_profile">My Profile</string>
    <string name="song_title_result">Song Title</string>
    <string name="artist_result">artist</string>
    <string name="geegs_locked">GEEGS Locked</string>
    <string name="insert_password_manually">Insert Password Manually</string>
    <string name="tap_below_to_insert_fingerprint">Tap below to insert fingerprint</string>
    <string name="go">Go</string>
    <string name="create_password_for_fingerprint">Create password for Fingerprint</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="song_url">Song URL</string>
    <string name="create_password_for_biometric">Create password for biometric</string>
    <string name="you_have_no_notification">You have no notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_description">Notification Description</string>
    <string name="charts"><u>CHARTS</u></string>
    <string name="add_a_lyric_song">Add a Lyric Song</string>
</resources>